--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.multiplayer.playmode": "1.3.3",
     "com.unity.multiplayer.tools": "2.2.4",
     "com.unity.netcode.gameobjects": "2.4.2",
+    "com.unity.recorder": "5.1.2",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.services.vivox": "16.6.0",
     "com.unity.test-framework": "1.4.6",
